[project]
name = "mace-water-meter"
version = "0.1.0"
description = "Mace Water Meter application for monitoring water flow via Modbus"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydoover==1.0.0a6",
    "transitions>=0.9.2",
]

[project.scripts]
doover-app-run = "mace_water_meter:main"
export-config = "mace_water_meter.app_config:export"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiohttp>=3.11.18",
    "pymodbus>=3.9.2",
    "pytest>=8.3.5",
    "grpcio==1.65.1",
    "protobuf==5.28.2",
    "pytest-asyncio>=0.26.0",
]

[tool.uv.sources]
pydoover = { git = "https://github.com/getdoover/pydoover" }
